--- a/src/style/grid.module.css
+++ b/src/style/grid.module.css
@@ -1,4 +1,5 @@
 .grid {
   margin-top: 1rem;
   display: grid;
+  place-items: center;
 }
